--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.volley:volley:1.0.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile fileTree(dir: 'libs', include: ['*.jar'])//floatingbutton
     testCompile 'junit:junit:4.12'
 }
