--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,12 +29,15 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.+'
-    compile 'com.android.support:cardview-v7:26.+'
-    compile 'com.android.support:recyclerview-v7:26.+'
+    compile 'com.android.support:cardview-v7:26.+'//cardview
+    compile 'com.android.support:recyclerview-v7:26.+'//recyclerview
     compile 'com.android.support:support-v4:26.+'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.volley:volley:1.0.0'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile fileTree(dir: 'libs', include: ['*.jar'])//floatingbutton
+    compile 'com.squareup.picasso:picasso:2.5.2'//picaso
+    compile 'com.android.volley:volley:1.0.0'//volley
+    compile 'de.hdodenhof:circleimageview:2.1.0'//circleimage
+    compile 'com.github.bumptech.glide:glide:3.7.0'//glide
+    compile 'com.google.android.gms:play-services-auth:9.8.0'//google play services
     testCompile 'junit:junit:4.12'
 }
+apply plugin: 'com.google.gms.google-services'
+
