--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -26,17 +27,26 @@ dependencies {
     })
     //    dependencies go here
     //material
+    //cardview
+    //recyclerview
+    //picaso
+    //volley
+    //circleimage
+    //glide
+    //google play services
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.+'
-    compile 'com.android.support:cardview-v7:26.+'//cardview
-    compile 'com.android.support:recyclerview-v7:26.+'//recyclerview
+    compile 'com.android.support:cardview-v7:26.+'
+    compile 'com.android.support:recyclerview-v7:26.+'
     compile 'com.android.support:support-v4:26.+'
-    compile 'com.squareup.picasso:picasso:2.5.2'//picaso
-    compile 'com.android.volley:volley:1.0.0'//volley
-    compile 'de.hdodenhof:circleimageview:2.1.0'//circleimage
-    compile 'com.github.bumptech.glide:glide:3.7.0'//glide
-    compile 'com.google.android.gms:play-services-auth:9.8.0'//google play services
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.google.android.gms:play-services-auth:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.firebase:firebase-crash:9.4.0'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
