--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
 }
 
 dependencies {
@@ -47,6 +50,13 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.firebase:firebase-crash:9.4.0'
+
+    compile 'com.google.android.gms:play-services-plus:10.0.1'
+
+    compile 'com.google.api-client:google-api-client:1.21.0'
+    compile 'com.google.oauth-client:google-oauth-client-jetty:1.21.0'
+    //  People API
+    compile 'com.google.apis:google-api-services-people:v1-rev2-1.21.0'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
