--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Splash">
+        <activity android:name=".Test">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,7 +22,8 @@
         <activity android:name=".Activity.LoginActivity" />
         <activity android:name=".Activity.HomeActitvity" />
         <activity android:name=".Activity.RegisterActivity" />
-        <activity android:name=".Extras.Signin"></activity>
+        <activity android:name=".Extras.Signin" />
+        <activity android:name=".Splash"></activity>
     </application>
 
 </manifest>
