Intial chat section

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,16 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <!-- screenawake -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <!-- pubnub -->
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
+    <permission
+        android:name="your.package.name.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="your.package.name.permission.C2D_MESSAGE" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +22,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Test">
+        <activity android:name=".Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,8 +32,14 @@
         <activity android:name=".Activity.LoginActivity" />
         <activity android:name=".Activity.HomeActitvity" />
         <activity android:name=".Activity.RegisterActivity" />
-        <activity android:name=".Extras.Signin" />
-        <activity android:name=".Splash"></activity>
+
+        <intent-filter>
+            <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+
+            <category android:name="your.package.name" />
+        </intent-filter>
+
+        <activity android:name=".ChatPubnub.MainActivity"></activity>
     </application>
 
 </manifest>
