--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,19 +28,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    //    dependencies go here
-    //material
-    //cardview
-    //recyclerview
-    //picaso
-    //volley
-    //circleimage
-    //glide
-    //google play services
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    
+
+    'com.android.support:appcompat-v7:26.+'
+
+   compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.+'
-    compile 'com.android.support:cardview-v7:26.+'
+    compile'com.android.support:cardview-v7:26.+'
     compile 'com.android.support:recyclerview-v7:26.+'
     compile 'com.android.support:support-v4:26.+'
     compile 'com.squareup.picasso:picasso:2.5.2'
@@ -50,13 +45,12 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.firebase:firebase-crash:9.4.0'
-
     compile 'com.google.android.gms:play-services-plus:10.0.1'
-
     compile 'com.google.api-client:google-api-client:1.21.0'
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.21.0'
-    //  People API
     compile 'com.google.apis:google-api-services-people:v1-rev2-1.21.0'
+    compile 'com.pubnub:pubnub-android:3.7.5'
+    compile 'com.google.code.gson:gson:2.3.1'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
