--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,9 +29,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.LoginActivity" />
+        <activity android:name=".ChatPubnub.ChatActivity" />
         <activity android:name=".Activity.HomeActitvity" />
         <activity android:name=".Activity.RegisterActivity" />
+
 
         <intent-filter>
             <action android:name="com.google.android.c2dm.intent.RECEIVE" />
@@ -39,7 +40,7 @@
             <category android:name="your.package.name" />
         </intent-filter>
 
-        <activity android:name=".ChatPubnub.Chat"></activity>
+        <activity android:name=".Activity.LoginActivity"></activity>
     </application>
 
 </manifest>
