--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,15 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <!-- pubnub -->
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <permission
         android:name="your.package.name.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
 
     <uses-permission android:name="your.package.name.permission.C2D_MESSAGE" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+
 
     <application
         android:allowBackup="true"
@@ -29,10 +32,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ChatPubnub.ChatActivity" />
+        <activity android:name=".Activity.ChatActivity" />
         <activity android:name=".Activity.HomeActitvity" />
         <activity android:name=".Activity.RegisterActivity" />
-
 
         <intent-filter>
             <action android:name="com.google.android.c2dm.intent.RECEIVE" />
@@ -40,7 +42,8 @@
             <category android:name="your.package.name" />
         </intent-filter>
 
-        <activity android:name=".Activity.LoginActivity"></activity>
+        <activity android:name=".Activity.LoginActivity" />
+        <activity android:name=".Activity.OnCallActivity"></activity>
     </application>
 
 </manifest>
