--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     compile 'com.google.apis:google-api-services-people:v1-rev2-1.21.0'
     compile 'com.pubnub:pubnub-android:3.7.5'
     compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
