--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,16 +42,18 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.google.android.gms:play-services-auth:10.0.1'
-    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.pubnub:pubnub-android:3.7.5'
+    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.google.android.gms:play-services-location:11.0.0'
+    compile 'com.google.android.gms:play-services-ads:11.0.0'
+    compile 'com.google.android.gms:play-services-auth:11.0.0'
+    compile 'com.google.android.gms:play-services-plus:11.0.0'
+    compile 'com.google.firebase:firebase-auth:11.0.0'
     compile 'com.google.firebase:firebase-crash:9.4.0'
-    compile 'com.google.android.gms:play-services-plus:10.0.1'
+    compile 'com.google.firebase:firebase-messaging:11.0.0'
     compile 'com.google.api-client:google-api-client:1.21.0'
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.21.0'
     compile 'com.google.apis:google-api-services-people:v1-rev2-1.21.0'
-    compile 'com.pubnub:pubnub-android:3.7.5'
-    compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.google.firebase:firebase-messaging:10.0.1'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
